--- a/bioboost/src/main/resources/application.properties
+++ b/bioboost/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+#Database
+spring.datasource.url=jdbc:mysql://localhost:3306/bioboost
+spring.datasource.username=root
+spring.datasource.password=cdtmdev
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+
+spring.h2.console.enabled=true
